[project]
name = "hash-cracking"
version = "0.3.0"
description = "Drives hashcat through staged mask attacks against SHA-1 hashes and captures timing + crack-rate results."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Lukas Scheucher" }]
dependencies = []

[project.scripts]
hash-cracking = "run_combos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
include = ["run_combos.py"]

[tool.ruff]
line-length = 100
target-version = "py314"
